...
/// color, an optional icon, and custom text. It also accepts a callback for when the button is tapped.
///
/// ### Parameters:
/// - [bgColor]: The background color of the button. Defaults to a grey color.
/// - [btnIcon]: An optional icon to be displayed inside the button.
/// - [onTab]: A callback function to be executed when the button is tapped.
/// - [btnText]: The text to be displayed on the button. Defaults to "OK".
/// - [btnTextStyle]: The text style for the button's text. If not provided, defaults to white text with a font size of 15.
/// - [fontSize]: The font size of the button's text. Defaults to `15`.
class ArtButton extends StatefulWidget {
  final Color bgColor; // Background color of the button
  final Icon? btnIcon; // Optional icon to display in the button
  final Function? onTab; // Callback when the button is tapped
...
